fixed submit price button spacing

--- a/client/src/components/SubmitPrice.scss
+++ b/client/src/components/SubmitPrice.scss
@@ -53,8 +53,8 @@
   padding-left: 2rem;
   padding-top: 1.2rem;
   padding-right: 1rem;
-  padding-top: 0.70rem;
-  padding-bottom: 0.70rem;
+  padding-top: 0.50rem;
+  padding-bottom: 0.50rem;
 }
 
 .MarginPrice {
